--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 CI=false
 GENERATE_SOURCEMAP=false
+REACT_APP_GOOGLE_SHEETS_API_KEY=your_actual_api_key_here
+REACT_APP_GOOGLE_SHEETS_CLIENT_ID=your_actual_client_id_here  
+REACT_APP_GOOGLE_SHEETS_SPREADSHEET_ID=your_actual_spreadsheet_id_here
